# Challenge2Ece578

./: DockerPush.sh  DockerRun.sh  Readme.md  ThriftBuild.sh  docker-compose.yml  vending_machine.thrift
config/: service-config.json
gen-cpp/: GetBeverageService.cpp  GetBeverageService.h  GetBeverageService_server.skeleton.cpp
gen-lua/: vending_machine_GetBeverageService.lua  vending_machine_OrderBeverageService.lua  vending_machine_ttypes.lua
gen-py/vending_machine/: GetBeverageService-remote  GetBeverageService.py  __init__.py
script/: output.txt
src/: CMakeLists.txt
src/GetBeverageService/: CMakeLists.txt  GetBeverageHandler.h  GetBeverageService.cpp
src/OrderBeverageService/: OrderBeverageHandler.h  OrderBeverageService.cpp
